// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsers node matches a bigger example 1`] = `
Array [
  Object {
    "geometry": "point",
    "id": "n4133782712",
    "loc": Object {
      "lat": 34.5280866,
      "lon": 74.1795357,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782713",
    "loc": Object {
      "lat": 34.528206,
      "lon": 74.1807924,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782714",
    "loc": Object {
      "lat": 34.5283653,
      "lon": 74.1822907,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782715",
    "loc": Object {
      "lat": 34.528425,
      "lon": 74.1815174,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782716",
    "loc": Object {
      "lat": 34.5285445,
      "lon": 74.1788832,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782717",
    "loc": Object {
      "lat": 34.5290024,
      "lon": 74.1788349,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782718",
    "loc": Object {
      "lat": 34.5292015,
      "lon": 74.179584,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782719",
    "loc": Object {
      "lat": 34.529301,
      "lon": 74.1824357,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782720",
    "loc": Object {
      "lat": 34.5294603,
      "lon": 74.1794149,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782721",
    "loc": Object {
      "lat": 34.5296992,
      "lon": 74.1823873,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782722",
    "loc": Object {
      "lat": 34.5297191,
      "lon": 74.1788349,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782723",
    "loc": Object {
      "lat": 34.5300377,
      "lon": 74.1821698,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782724",
    "loc": Object {
      "lat": 34.5303562,
      "lon": 74.1783274,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782725",
    "loc": Object {
      "lat": 34.530396,
      "lon": 74.1816382,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782726",
    "loc": Object {
      "lat": 34.5305354,
      "lon": 74.1805024,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782727",
    "loc": Object {
      "lat": 34.5309137,
      "lon": 74.1799224,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782728",
    "loc": Object {
      "lat": 34.5311526,
      "lon": 74.1786899,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782729",
    "loc": Object {
      "lat": 34.5314114,
      "lon": 74.1793182,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:40Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "line",
    "id": "w411770875",
    "nodes": Array [
      "n4133782719",
      "n4133782714",
      "n4133782715",
      "n4133782713",
      "n4133782712",
      "n4133782716",
      "n4133782717",
      "n4133782718",
      "n4133782720",
      "n4133782722",
      "n4133782724",
      "n4133782728",
      "n4133782729",
      "n4133782727",
      "n4133782726",
      "n4133782725",
      "n4133782723",
      "n4133782721",
      "n4133782719",
    ],
    "properties": Object {
      "changeset": "50089927",
      "timestamp": "2017-07-06T17:19:04Z",
      "uid": "2815653",
      "user": "Srihari Thalla",
      "version": "2",
      "visible": true,
    },
    "tags": Object {
      "landuse": "residential",
      "place": "village",
      "source": "MSF Survey",
    },
    "type": "way",
  },
]
`;

exports[`parsers node matches snapshot 1`] = `
Array [
  Object {
    "geometry": "point",
    "id": "n1",
    "loc": Object {
      "lat": 0,
      "lon": 0,
    },
    "properties": Object {
      "changeset": "1",
      "timestamp": "2009-03-07T03:26:33Z",
      "uid": undefined,
      "user": undefined,
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
]
`;

exports[`parsers node matches snapshot 2`] = `
Array [
  Object {
    "geometry": "point",
    "id": "n4133782712",
    "loc": Object {
      "lat": 34.5280866,
      "lon": 74.1795357,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
  Object {
    "geometry": "point",
    "id": "n4133782713",
    "loc": Object {
      "lat": 34.528206,
      "lon": 74.1807924,
    },
    "properties": Object {
      "changeset": "38701677",
      "timestamp": "2016-04-19T17:58:39Z",
      "uid": "592097",
      "user": "Dombo",
      "version": "1",
      "visible": true,
    },
    "tags": Object {},
    "type": "node",
  },
]
`;

exports[`parsers way matches snapshot 1`] = `
Array [
  Object {
    "geometry": "line",
    "id": "w411770875",
    "nodes": Array [
      "n4133782719",
      "n4133782714",
      "n4133782715",
      "n4133782713",
      "n4133782712",
      "n4133782716",
      "n4133782717",
      "n4133782718",
      "n4133782720",
      "n4133782722",
      "n4133782724",
      "n4133782728",
      "n4133782729",
      "n4133782727",
      "n4133782726",
      "n4133782725",
      "n4133782723",
      "n4133782721",
      "n4133782719",
    ],
    "properties": Object {
      "changeset": "50089927",
      "timestamp": "2017-07-06T17:19:04Z",
      "uid": "2815653",
      "user": "Srihari Thalla",
      "version": "2",
      "visible": true,
    },
    "tags": Object {
      "landuse": "residential",
      "place": "village",
      "source": "MSF Survey",
    },
    "type": "way",
  },
]
`;
